--- a/public/inicio.html
+++ b/public/inicio.html
@@ -57,13 +57,13 @@
           </li>
 
           <li class="nabvar__item">
-            <a class="nabvar__link" href="./pages/contacto.html">CONTACTO</a>
+            <a class="nabvar__link" href="../public/pages/shop/contacto.html">CONTACTO</a>
           </li>
           <li class="nabvar__item">
-            <a class="nabvar__link" href="./pages/admin/login.html">LOGIN</a>
+            <a class="nabvar__link" href="../public/pages/admin/login.html">LOGIN</a>
           </li>
           <li class="nabvar__item">
-            <a class="nabvar__cart" href="./pages/carrito.html"
+            <a class="nabvar__cart" href="../public/pages/shop/carrito.html"
               ><img
                 src="./img/multimedia/icons/cart-icon.svg"
                 alt="logo del carrito"
@@ -91,7 +91,7 @@
           <p class="collection__text">
             Disfruta de una saga que sigue agregando personajes a tu coleccion
           </p>
-          <a class="collection__link" href="./pages/shop.html">VER COLECCION</a>
+          <a class="collection__link" href="../public/pages/shop/shop.html">VER COLECCION</a>
         </article>
         <picture class="collection__cover">
           <img
@@ -236,14 +236,14 @@
       <nav class="nabvar container">
         <ul class="nabvar__item">
           <li class="nabvar__items">
-            <a class="nabvar__link" href="./pages/shop/shop.html">SHOP</a>
+            <a class="nabvar__link" href="../public/pages/shop/shop.html">SHOP</a>
           </li>
           <li class="nabvar__items">
-            <a class="nabvar__link" href="./pages/register.html">REGISTRARSE</a>
+            <a class="nabvar__link" href="../public/pages/admin/register.html">REGISTRARSE</a>
           </li>
 
           <li class="nabvar__items">
-            <a class="nabvar__link" href="./pages/contacto.html">CONTACTO</a>
+            <a class="nabvar__link" href="../public/pages/shop/contacto.html">CONTACTO</a>
           </li>
         </ul>
         <picture>
