--- a/public/pages/admin/login.html
+++ b/public/pages/admin/login.html
@@ -3,10 +3,87 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="../estilos/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+    crossorigin="anonymous"
+  />
+    <link rel="stylesheet" href="../../estilos/login.css">
+    <!-- <link rel="stylesheet" href="../css/bootstrap.min.css"> -->
+
+    <title>LOGIN</title>
 </head>
 <body>
-    <h1>LOGIN</h1>
-</body>
+       <!-- header -->
+       <header >
+        <!-- inicio de navbar -->
+        <nav class="nabvar container2">
+            <!-- a la clase le agregamos container porque definimos que container no supere el ancho de 1200PX -->
+            <!-- usamos la terminologia BEM,block element modifier, a los hijos le damos el nombre del padre modificado -->
+            <picture class="nabvar__logo">
+                <a href="../../inicio.html">
+                    <img src="../../img/multimedia/branding/logo_light_horizontal.svg"
+                        alt="isologotipo de la marca Funkoshop" />
+                </a>
+            </picture>
+            <ul class="nabvar__menu">
+                <li class="nabvar__item with-submenu">
+                    <!-- le agregamos la clase with submenu para que funcione el desplegable -->
+                    <a class="nabvar__link with-icon" href="../../inicio.html">VER TIENDA</a>
+                    <!-- El chevron lo bajamos de la libreria iconify, y agregamos el script para que funcione -->
+                    <!-- agregamos la clase with-icon que nos sirve de ayuda para posicionar lo que tiene el enlace -->
+                   
+                </li>
+
+                <li class="nabvar__item">
+                    <a class="nabvar__link" href="../shop/contacto.html">ADMIN</a>
+                </li>
+                <li class="nabvar__item">
+                    <a class="nabvar__link" href="./login.html">SALIR</a>
+                </li>
+                <li class="nabvar__item">
+                    <a class="nabvar__cart" href="../../pages/shop/carrito.html"><img src="../../img/multimedia/icons/cart-icon.svg"
+                            alt="logo del carrito" /></a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <!-- formulario -->
+    <div class="formulario">
+        <h2>Registro</h2>
+        <form name="myForm" action="/submit_form" onsubmit="return validateForm()" method="post">
+            <label for="fname">Nombre:</label><br>
+            <input type="text" id="fname" name="fname" required><br>
+            <label for="email">Correo electrónico:</label><br>
+            <input type="email" id="email" name="email" required><br>
+            <label for="psw">Contraseña:</label><br>
+            <input type="password" id="psw" name="psw" required><br>
+            <label for="psw-repeat">Repetir contraseña:</label><br>
+            <input type="password" id="psw-repeat" name="psw-repeat" required><br>
+            <input type="submit" value="Crear cuenta">
+        </form>
+    </div>
+    <!-- footer -->
+    <footer class="pie-pagina">
+        <div class="contacto">Contacto</div>
+        <div>
+            <ul>
+                <li>telefono:44589001</li>
+                <li>direccion:Av jujuy 309</li>
+                <li>correo:contacto@comicsstore.com</li>
+            </ul>
+        </div>
+        <div class="pago">
+            <h5>Medios de pago</h5>
+        </div>
+        <!-- <script src="./js/bootstrap.bundle.min.js"></script> -->
+        <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" -->
+            <!-- integrity="sha384-pzjw8f+ua7Kw1TIq0v8FqFjcJ6pajs/rfdfs3SO+kD4Ck5BdPtF+to8xMp9Mvc9E3I3WQ8wKUi3A0/GIi2vz9Z+GoiPkYs+gydKh3GpC/gZcI2Pf3Cj02qNW43wXxMf3oP81p3V7+8fvE+04vflMG22d6/lwZYhN42C9Xp28O17xOvT4A0XUt/Lk/g"
+            crossorigin="anonymous"></script> -->
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="../../js/login.js"></script>
+        </body>
 </html>
