--- a/public/pages/shop/shop.html
+++ b/public/pages/shop/shop.html
@@ -1,12 +1,179 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shop</title>
-    <link rel="stylesheet" href="../style.css">
+    <!-- <link rel="stylesheet" href="../../estilos/bootstrap.min.css"> -->
+    <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+    crossorigin="anonymous"
+  />
+    <link rel="stylesheet" href="../../estilos/shop.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <title>SHOP</title>
 </head>
+
 <body>
-    <h1>SHOP</h1>
+    <!-- header -->
+    <header >
+        <!-- inicio de navbar -->
+        <nav class="nabvar container2">
+            <!-- a la clase le agregamos container porque definimos que container no supere el ancho de 1200PX -->
+            <!-- usamos la terminologia BEM,block element modifier, a los hijos le damos el nombre del padre modificado -->
+            <picture class="nabvar__logo">
+                <a href="../../inicio.html">
+                    <img src="../../img/multimedia/branding/logo_light_horizontal.svg"
+                        alt="isologotipo de la marca Funkoshop" />
+                </a>
+            </picture>
+            <ul class="nabvar__menu">
+                <li class="nabvar__item with-submenu">
+                    <!-- le agregamos la clase with submenu para que funcione el desplegable -->
+                    <a class="nabvar__link with-icon" href="">SHOP <iconify-icon
+                            icon="bi:chevron-down"></iconify-icon></a>
+                    <!-- El chevron lo bajamos de la libreria iconify, y agregamos el script para que funcione -->
+                    <!-- agregamos la clase with-icon que nos sirve de ayuda para posicionar lo que tiene el enlace -->
+                    <ul class="submenu">
+                        <li class="submenu__item">
+                            <a class="submenu__link" href="">FUNKOS</a>
+                        </li>
+                        <li class="submenu__item">
+                            <a class="submenu__link" href="">REMERAS</a>
+                        </li>
+                        <li class="submenu__item">
+                            <a class="submenu__link" href="">LLAVEROS</a>
+                        </li>
+                    </ul>
+                </li>
+
+                <li class="nabvar__item">
+                    <a class="nabvar__link" href="./contacto.html">CONTACTO</a>
+                </li>
+                <li class="nabvar__item">
+                    <a class="nabvar__link" href="../admin/login.html">LOGIN</a>
+                </li>
+                <li class="nabvar__item">
+                    <a class="nabvar__cart" href="./carrito.html"><img src="../../img/multimedia/icons/cart-icon.svg"
+                            alt="logo del carrito" /></a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <!-- filtro de busqueda -->
+    
+            
+
+
+
+            <!-- productos -->
+
+            <div class="col-md 9">
+                <section class="destacado">
+                    <div class="col-md-4 product">
+                        <img src="../../img/multimedia/star-wars/trooper-1.webp" alt="Producto 1">
+                        <h3>Star wars</h3>
+                        <p>stormtrooper lightsaber.</p>
+                        <span class="price">$100</span>
+                    </div>
+                    <div class="col-md-4 product">
+                        <img src="../../img/multimedia/pokemon/pidgeotto-1.webp" alt="Producto 2">
+                        <h3>Pokemon</h3>
+                        <p>Pidgeotto.</p>
+                        <span class="price">$150</span>
+                    </div>
+                    <div class="col-md-4 product">
+                        <img src="../../img/multimedia/harry-potter/luna-1.webp" alt="Producto 3">
+                        <h3>Harry potter</h3>
+                        <p>luna lovegood lion mask.</p>
+                        <span class="price">$</span>
+                    </div>
+
+                    <div class="col-md-4 product">
+                        <img src="../../img/multimedia/star-wars/trooper-1.webp" alt="Producto 1">
+                        <h3>Star wars</h3>
+                        <p>stormtrooper lightsaber.</p>
+                        <span class="price">$100</span>
+                    </div>
+                    <div class="col-md-4 product">
+                        <img src="../../img/multimedia/pokemon/pidgeotto-1.webp" alt="Producto 2">
+                        <h3>Pokemon</h3>
+                        <p>Pidgeotto.</p>
+                        <span class="price">$150</span>
+                    </div>
+                    <div class="col-md-4 product">
+                        <img src="../../img/multimedia/harry-potter/luna-1.webp" alt="Producto 3">
+                        <h3>Harry potter</h3>
+                        <p>luna lovegood lion mask.</p>
+                        <span class="price">$</span>
+                    </div>
+                    <div class="col-md-4 product">
+                        <img src="../../img/multimedia/star-wars/trooper-1.webp" alt="Producto 1">
+                        <h3>Star wars</h3>
+                        <p>stormtrooper lightsaber.</p>
+                        <span class="price">$100</span>
+                    </div>
+                    <div class="col-md-4 product">
+                        <img src="../../img/multimedia/pokemon/pidgeotto-1.webp" alt="Producto 2">
+                        <h3>Pokemon</h3>
+                        <p>Pidgeotto.</p>
+                        <span class="price">$150</span>
+                    </div>
+                    <div class="col-md-4 product">
+                        <img src="../../img/multimedia/harry-potter/luna-1.webp" alt="Producto 3">
+                        <h3>Harry potter</h3>
+                        <p>luna lovegood lion mask.</p>
+                        <span class="price">$</span>
+                    </div>
+                    <div class="pagination-cont">
+                        <div class="pagination">
+                            <a href="#" class="page-link">&laquo;</a>
+                            <a href="#" class="page-link active">1</a>
+                            <a href="#" class="page-link">2</a>
+                            <a href="#" class="page-link">3</a>
+                            <a href="#" class="page-link">&raquo;</a>
+                        </div>
+                    </div>
+
+
+
+                </section>
+
+                <footer class="footer">
+                    <nav class="nabvar container2">
+                        <ul class="nabvar__item">
+                            <li class="nabvar__items">
+                                <a class="nabvar__link" href="./pages/shop/shop.html">SHOP</a>
+                            </li>
+                            <li class="nabvar__items">
+                                <a class="nabvar__link" href="..//admin/register.html">REGISTRARSE</a>
+                            </li>
+                            <li class="nabvar__items">
+                                <a class="nabvar__link" href="../admin/login.html">LOGIN</a>
+                            </li>
+                            <li class="nabvar__items">
+                                <a class="nabvar__link" href="./contacto.html">CONTACTO</a>
+                            </li>
+                        </ul>
+                        <picture>
+                            <img src="../../img/multimedia/branding/isotype.svg" alt="Isotipo logo tienda Funkoshop" />
+                        </picture>
+                    </nav>
+                    <p class="footer__copy">All rights reserved 2023- Funkoshop&COPY;</p>
+                    <p class="footer__copy">Curso Codo a Codo- Comision 23051</p>
+                </footer>
+
+
+
+
+
+
+            <script src="./js/bootstrap.bundle.min.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pzjw8f+ua7Kw1TIq0v8FqFjcJ6pajs/rfdfs3SO+kD4Ck5BdPtF+to8xMp9Mvc9E3I3WQ8wKUi3A0/GIi2vz9Z+GoiPkYs+gydKh3GpC/gZcI2Pf3Cj02qNW43wXxMf3oP81p3V7+8fvE+04vflMG22d6/lwZYhN42C9Xp28O17xOvT4A0XUt/Lk/g" crossorigin="anonymous"></script>
+
 </body>
+
 </html>
